# pythonlodz.org

./: .augmentignore  .env.example  .gitignore  404.html  README.md  index.html  index.json  index.xml  pyproject.toml  robots.txt  sitemap.xml
.augment/rules/: general.md
.github/workflows/: hugo.yaml
59/: index.html
65/: index.html
assets/css/: custom.css
authors/: index.html  index.xml
categories/: index.html  index.xml
config/_default/: hugo.toml  languages.pl.toml  menus.pl.toml  params.toml
content/: polityka-cookies.md  prelegenci-przetwarzanie-danych.md  regulamin-uczestnictwa.md
content/sponsorzy/: _index.md
content/spotkania/: 55.md  56.md  57.md  _content.gotmpl  _index.md
css/: main.bundle.min.34d7373bbf62125b4a19bef366fe4fdef50fae18b4c53e765a59480da810b01e886160b5ff317f1ae96cef62f058c77940a42f4e588c0ab95e549205d24caab0.css
data/meetups/: 55.yaml  56.yaml  57.yaml  58.yaml
data/speakers/: daniel-rozycki.yaml  kamil-kucharski.yaml  michal-mroz.yaml  sebastian-buczynski.yaml
data/sponsors/: indiebi.yaml  sunscrapers.yaml
layouts/partials/: infographic-image-solo.html  infographic-image.html
layouts/shortcodes/: meetup-details.html
page/: hugo.toml
page/1/: index.html
page/2/: index.html
page/config/_default/: languages.pl.toml  params.toml
page/content/sponsorzy/: _content.gotmpl
page/content/spotkania/57/: index.md
page/content/spotkania/58/: index.md
page/content/spotkania/59/: index.md
page/content/spotkania/60/: index.md
page/content/spotkania/61/: index.md
page/content/spotkania/62/: index.md
page/content/spotkania/63/: index.md
page/content/spotkania/63/descriptions/: chatgpt-prompt.md  meetup-com.md  youtube-live.md  youtube-recording.md
page/content/spotkania/63/descriptions/youtube-talks/: talk-1.md  talk-2.md
page/content/spotkania/64/: index.md
page/content/spotkania/64/descriptions/: chatgpt-prompt.md  meetup-com.md  youtube-live.md  youtube-recording.md
page/content/spotkania/64/descriptions/youtube-talks/: talk-1.md  talk-2.md
page/content/spotkania/65/: index.md
page/data/locations/: indiebi.yaml
page/data/meetups/: 55.yaml  57.yaml  58.yaml  59.yaml
page/data/speakers/: bartosz-slawecki.yaml  grzegorz-kocjan.yaml  jarek-potiuk.yaml  jarek-smietanka.yaml  kamil-kucharski.yaml  konrad-gawda.yaml  lukasz-langa.yaml  magdalena-nowak.yaml  marek-pilczuk.yaml  mateusz-glowinski.yaml  mateusz-piwek.yaml  michal-moroz.yaml  rafal-kowalski.yaml  sebastian-buczynski.yaml  tomasz-wrona.yaml
page/data/sponsors/: indiebi.yaml  sunscrapers.yaml
page/i18n/: pl.yaml
page/layouts/partials/: extend-head.html  infographic-image-duo.html  infographic-image-solo.html  meta-pixel.html  ms-clarity.html
page/layouts/shortcodes/: speaker.html
page/static/: CNAME
polityka-cookies/: index.html
prelegenci-przetwarzanie-danych/: index.html
regulamin-uczestnictwa/: index.html
series/: index.html  index.xml
sponsorzy/: index.html  index.xml
sponsorzy/indiebi/: index.html
sponsorzy/page/1/: index.html
sponsorzy/sunscrapers/: index.html
spotkania/: index.html  index.xml
spotkania/55/: index.html
spotkania/56/: index.html
spotkania/57/: index.html
spotkania/58/: index.html
spotkania/59/: index.html
spotkania/60/: index.html
spotkania/61/: index.html
spotkania/62/: index.html
spotkania/63/: index.html
spotkania/64/: index.html
spotkania/65/: index.html
spotkania/page/1/: index.html
spotkania/page/2/: index.html
src/: __init__.py
src/pyldz/: __init__.py  config.py  example_usage.py  face_centering.py  generate_meetups.py  hugo_generator.py  image_generator.py  logging_config.py  main.py  models.py  repository.py  speaker_yaml.py
src/pyldz/descriptions/: __init__.py  generators.py  models.py  repository.py
src/pyldz/i18n/: __init__.py
src/tests/: __init__.py
tags/: index.html  index.xml
tags/następne-spotkanie/: index.html  index.xml
tags/następne-spotkanie/page/1/: index.html
tags/regulaminy/: index.html  index.xml
tags/regulaminy/page/1/: index.html
tests/: test_avatar_aspect_ratio.py  test_cli.py  test_descriptions.py  test_duo_compact_layout.py  test_face_centering.py  test_image_generator.py  test_integration.py  test_models.py  test_repository.py  test_speaker_yaml.py
